--- a/src/main/resources/templates/mj/seller/management.html
+++ b/src/main/resources/templates/mj/seller/management.html
@@ -23,15 +23,16 @@
     <link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
     <!-- CSS -->
     <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/mj/seller.css}'>
+    <link rel='stylesheet' type='text/css' media='screen' th:href='@{/css/jk/seller.css}'>
 </head>
 
 <body class="sb-nav-fixed">
     <!-- header -->
-    <th:block th:replace="~{/mj/seller/header :: headerHTML}"></th:block>
+    <th:block th:replace="~{/jk/seller/header :: headerHTML}"></th:block>
     <!-- 전체화면 영역 -->
     <div id="layoutTotal">
         <!-- 전체화면 > 좌측 메뉴 영역(사이드바) -->
-        <th:block th:replace="~{/mj/seller/navbar :: navbarHTML}"></th:block>
+        <th:block th:replace="~{/jk/seller/navbar :: navbarHTML}"></th:block>
 
         <!-- 전체화면 > 우측 메인화면 영역 -->
         <div id="layoutContent">
@@ -76,10 +77,11 @@
                     </form> -->
                     <hr>
                     <input type="hidden" name="btn" id="btn"/>
-                    <a th:href="@{/seller/item/insert.do}"><button class="btn btn-primary">물품등록</button></a>
-                    <button class="btn btn-primary" value="일괄수정" onclick="formAction1(1)">수정</button>
-                    <button class="btn btn-primary" value="일괄삭제" onclick="formAction1(2)">삭제</button>
                     
+                        <a th:href="@{/seller/item/insert.do}" class="btn-find"><button class="btn btn-primary btn-find">물품등록</button></a>
+                        <button class="btn btn-primary btn-find" value="일괄수정" onclick="formAction1(1)">수정</button>
+                        <button class="btn btn-primary btn-find" value="일괄삭제" onclick="formAction1(2)">삭제</button>
+s                    
                     <form th:action="@{/seller/item/management.do}" method="post" id="form2">
 
                         <div class="row">
@@ -148,7 +150,7 @@
                 </div>
             </main>
             <!-- footer -->
-            <th:block th:replace="~{/mj/seller/footer :: footerHTML}"></th:block>
+            <th:block th:replace="~{/jk/seller/footer :: footerHTML}"></th:block>
         </div>
     </div>
 
