--- a/src/main/resources/templates/se/customer/home.html
+++ b/src/main/resources/templates/se/customer/home.html
@@ -15,6 +15,76 @@
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- axios (https://cdnjs.com/libraries/axios) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js" integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <style>
+
+        .homeMain {
+            max-width: 1300px;
+            margin-top: 100px;
+        }
+
+        .dday1 {
+            position: relative;
+            margin: 10px;
+            padding: 0 10px 0 10px;
+            top: -450px;
+            left: -12px;
+            background-color: #6D9275;
+            color: #fff;
+        }
+
+        .dday2 {
+            position: relative;
+            margin: 10px;
+            padding: 0 10px 0 10px;
+            top: -381px;
+            left: -10px;
+            background-color: #6D9275;
+            color: #fff;
+        }
+
+        .itemCover1 {
+            position: absolute;
+            left: 10px;
+            top: 10px;
+            width: 230px;
+            height: 270px;
+            visibility: collapse;
+            color: #fff;
+            transition: background 0.3s ease-in-out;
+        }
+        
+        .itemCover1:hover {
+            background-color: rgba(109, 146, 117, 0.85);
+        }
+
+        /* 스크롤해도 따라다니는 버튼 만들기 */
+        #totalBtn {
+            position:fixed; 
+            width:200px;
+            display:inline-block;
+            right:30px; /* 창에서 오른쪽 길이 */
+            top:91%; /* 창에서 위에서 부터의 높이 */
+            background-color: transparent;
+            margin:0;
+
+            color: #204710;
+
+        }
+
+        .totalBtnText {
+            margin: 35px 10px 0 0;
+            opacity: 0;
+            transition: all ease 0.3s;
+        }
+
+        .totalBtnImage:hover + .totalBtnText {
+            opacity: 1;
+            display: inline-block;
+        }
+
+    </style>
+
 </head>
 
 <body>
@@ -22,59 +92,140 @@
     <th:block th:replace="~{/se/customer/header :: headerHTML}"></th:block>
     
     <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
-    <div style="padding-bottom: 300px;">
+    <div style="padding-bottom: 400px;">
 
-        <div class="container">
-
-            <!-- 비로그인 -->
-            <th:block th:if="${user} == null">
-
-                기한이 얼마 안 남은 공구 (5개) 
-                <hr>
-                <th:block th:each=" deadOne : ${deadList} ">
-                    <th:block th:text="${deadOne.price}"></th:block>
-                    <th:block th:text="|D-${deadOne.dday}|"></th:block>
-                    <img th:src="@{/customer/seimage(itemno=${deadOne.itemno})}" style="width: 100px;">
-                </th:block>
-                <hr>
-                공구가 많이 열린 물품 (8개)
-                <hr>
-                <th:block th:each=" manyOne : ${manyList} ">
-                    <th:block th:text="${manyOne.price}"></th:block>
-                    <img th:src="@{/customer/seimage(itemno=${manyOne.itemno})}" style="width: 100px;">
-                </th:block>
-                <hr>
-
-            </th:block>
-
-
-            <!-- 로그인 -->
-            <th:block th:if="${user} != null">
-
-                내 주위 실시간 공구 (5개)
-                <hr>
-                <th:block th:each=" aroundOne : ${aroundList} ">
-                    <th:block th:text="${aroundOne.price}"></th:block>
-                    <img th:src="@{/customer/seimage(itemno=${aroundOne.itemno})}" style="width: 100px;">
-                </th:block>
-                기한이 얼마 안 남은 공구 (8개)
-                <hr>
-                <th:block th:each=" deadOne : ${deadList} ">
-                    <th:block th:text="${deadOne.price}"></th:block>
-                    <th:block th:text="|D-${deadOne.dday}|"></th:block>
-                    <img th:src="@{/customer/seimage(itemno=${deadOne.itemno})}" style="width: 100px;">
-                </th:block>
-                <hr>
-                
-            </th:block>
-
-
+        <div class="container-fluid d-flex justify-content-center" >
+            <img src="http://via.placeholder.com/1300x560" alt=""> <!-- 배너이미지 -->
         </div>
+            
+        <!-- 비로그인 -->
+        <th:block th:if="${user} == null">
+            
+            <div class="container homeMain">
+                <th:block th:if="${idx.index == 0}" th:each=" deadOne, idx : ${deadList} ">
+                    <div class="row mb-3">
+                        <div class="col-auto">
+                            <!-- 기한이 얼마 안 남은 공구 -->
+                            <img src="http://via.placeholder.com/800x450" alt="">
+                        </div>
+                        <div class="col">
+                            <img th:src="@{/customer/seimage(itemno=${deadOne.itemno})}" style="height: 100%; overflow-y: hidden;">
+                            <div class="dday1 shadow-sm" th:text="|D - ${deadOne.dday}|"></div>
+                        </div>
+                    </div>
+                </th:block>
+
+                <div class="row mb-5">
+                    <th:block th:if="${idx.index != 0}" th:each=" deadOne, idx : ${deadList} ">
+                        <div class="col card p-0 shadow-sm m-2">
+                            <img class="card-img-top" th:src="@{/customer/seimage(itemno=${deadOne.itemno})}" style="width: 307px; height: 307px;">
+                            <div class="card-body p-3">
+                                <div class="card-text" th:text="${deadOne.name}"></div>
+                                <div class="card-text" th:text="${#numbers.formatInteger(deadOne.price, 3, 'COMMA') + '원'}"></div>
+                                <label class="card-text dday2 shadow-sm" th:text="|D - ${deadOne.dday}|"></label>
+                            </div>
+                        </div>
+                    </th:block>
+                </div>
+                
+                <br><br><br>
+
+                <img class="m-3" th:src="@{/images/se/roundlogo1.jpg}" style="width: 80px; height: 80px;">
+                <img class="m-3" th:src="@{/images/se/roundlogo2.jpg}" style="width: 80px; height: 80px;">
+                <img class="m-3" th:src="@{/images/se/roundlogo3.jpg}" style="width: 80px; height: 80px;">
+                <h5 class="m-2" style="display: inline-block;">공구가 많이 열린 물품</h5>
+                <div class="line" style="display: inline-block;"></div>
+                <br><br>
+                <th:block th:each=" manyOne, idx : ${manyList} ">
+                    <div style="position: relative; display: inline-block;" th:onmouseover="mouseOverAction([[${idx.index}]])" th:onmouseout="mouseOutAction([[${idx.index}]])">
+                        <div name="itemCover1" class="itemCover1 d-flex flex-column justify-content-center align-items-center">
+                            <div th:text="${manyOne.name}"></div>
+                            <div th:text="${#numbers.formatInteger(manyOne.price, 3, 'COMMA') + '원'}"></div>
+                        </div>
+            
+                        <img th:src="@{/customer/seimage(itemno=${manyOne.itemno})}" style="width: 230px; height: 270px; margin: 10px; margin-bottom: 40px; "><br>
+                    </div>
+                </th:block>
+            </div>
+
+        </th:block>
+
+
+        <!-- 로그인 -->
+        <th:block th:if="${user} != null">
+
+            <div class="container homeMain">
+                <th:block th:if="${idx.index == 0}" th:each=" aroundOne, idx : ${aroundList} ">
+                    <div class="row mb-3">
+                        <div class="col-auto">
+                            <!-- 내 주위 실시간 공구 -->
+                            <img src="http://via.placeholder.com/800x450" alt="">
+                        </div>
+                        <div class="col">
+                            <img th:src="@{/customer/seimage(itemno=${aroundOne.itemno})}" style="height: 100%; overflow-y: hidden;">
+                            <div class="dday1 shadow-sm" th:text="${aroundOne.name}"></div>
+                        </div>
+                    </div>
+                </th:block>
+
+                <div class="row mb-5">
+                    <th:block th:if="${idx.index != 0}" th:each=" aroundOne, idx : ${aroundList} ">
+                        <div class="col card p-0 shadow-sm m-2">
+                            <img class="card-img-top" th:src="@{/customer/seimage(itemno=${aroundOne.itemno})}" style="width: 307px; height: 307px;">
+                            <div class="card-body p-3">
+                                <div class="card-text" th:text="${aroundOne.name}"></div>
+                                <div class="card-text" th:text="${#numbers.formatInteger(aroundOne.price, 3, 'COMMA') + '원'}"></div>
+                            </div>
+                        </div>
+                    </th:block>
+                </div>
+                
+                <br><br><br>
+
+                <img class="m-3" th:src="@{/images/se/roundlogo1.jpg}" style="width: 80px; height: 80px; border-radius: 40px;" alt="">
+                <img class="m-3" th:src="@{/images/se/roundlogo2.jpg}" style="width: 80px; height: 80px; border-radius: 40px;" alt="">
+                <img class="m-3" th:src="@{/images/se/roundlogo3.jpg}" style="width: 80px; height: 80px; border-radius: 40px;" alt="">
+                <h5 class="m-2" style="display: inline-block;">기한이 얼마 안 남은 공구</h5>
+                <div class="line" style="display: inline-block;"></div>
+                <br><br>
+                <th:block th:each=" deadOne, idx : ${deadList} ">
+                    <div style="position: relative; display: inline-block;" th:onmouseover="mouseOverAction([[${idx.index}]])" th:onmouseout="mouseOutAction([[${idx.index}]])">
+                        <div name="itemCover1" class="itemCover1 d-flex flex-column justify-content-center align-items-center">
+                            <div th:text="${deadOne.name}"></div>
+                            <div th:text="${#numbers.formatInteger(deadOne.price, 3, 'COMMA') + '원'}"></div>
+                            <label class="shadow-sm" th:text="|D - ${deadOne.dday}|"></label>
+                        </div>
+                        <img th:src="@{/customer/seimage(itemno=${deadOne.itemno})}" style="width: 230px; height: 270px; margin: 10px; margin-bottom: 40px; "><br>
+                    </div>
+                </th:block>
+
+            </div>
+            
+        </th:block>
+        
+        <a th:href="@{/customer/item/selectlist.do}">
+            <div id="totalBtn" class="container homeMain d-flex flex-row-reverse align-items-center">
+                <img class="shadow-sm totalBtnImage" th:src="@{/images/se/roundlogo4.jpg}" style="width: 70px; height: 70px; border-radius: 35px;">
+                <div class="totalBtnText">전체물품</div>
+            </div>
+        </a>
 
     </div>
 
     <!-- footer -->
     <th:block th:replace="~{/km/customer/footer :: footerHTML}"></th:block>
+
+    <script>
+        const mouseOverAction = (idx) => {
+            const itemCover1 = document.getElementsByName('itemCover1')[idx];
+            itemCover1.style.visibility = 'visible';
+        }
+
+        const mouseOutAction = (idx) => {
+            const itemCover1 = document.getElementsByName('itemCover1')[idx];
+            itemCover1.style.visibility = 'collapse';
+        }
+    </script>
 
 </body>
 </html>
